Bug 46626 - UI: Navigator: heading with footnote displays footnote number full size
Summary: UI: Navigator: heading with footnote displays footnote number full size
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: Other All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: BSA target:7.3.0 target:7.2.0.0.beta2
Keywords:
: 81742 (view as bug list)
Depends on:
Blocks: Navigator Footnote-Endnote
  Show dependency treegraph
 
Reported: 2012-02-25 12:15 UTC by clemty
Modified: 2021-07-15 11:34 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
screenshot showing footnote and table of contents (39.09 KB, image/png)
2012-02-25 12:15 UTC, clemty
Details

Note You need to log in before you can comment on or make changes to this bug.
Description clemty 2012-02-25 12:15:35 UTC
Created attachment 57639 [details]
screenshot showing footnote and table of contents

Problem description: 
Footnote numbers show up in a distracting way in the navigator

Steps to reproduce:
1. write a line of text
2. add footnote somewhere in that line
3. assign Heading 1 to text
4. open navigator

Current behavior:
number is displayed in the same size as the rest1 of the text

Expected behavior:
don't display the footnote number. it is not displayed in table of contents either (see attached screenshot)

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Windows NT 6.1; rv:10.0.2) Gecko/20100101 Firefox/10.0.2
Comment 1 Urmas 2012-02-25 14:05:19 UTC
Sometimes happens.
Comment 2 clemty 2012-08-16 15:17:33 UTC Comment hidden (obsolete)
Comment 3 clemty 2012-12-20 11:53:12 UTC Comment hidden (obsolete)
Comment 4 Owen Genat (retired) 2013-05-13 01:43:35 UTC
Refer my comment in bug #47871:

https://bugs.freedesktop.org/show_bug.cgi?id=47871#c3
Comment 5 clemty 2013-05-13 08:17:28 UTC
Thank you for your comment, however this bug report refers to the technical side of things (the handling of footnotes not being consistent between ToC and navigator) and not if it is a good stylistic choice to have footnotes in headings.
Comment 6 Urmas 2014-07-25 12:32:23 UTC
*** Bug 81742 has been marked as a duplicate of this bug. ***
Comment 7 QA Administrators 2016-09-20 09:36:56 UTC Comment hidden (obsolete)
Comment 8 clemty 2016-09-20 15:58:26 UTC Comment hidden (obsolete)
Comment 9 QA Administrators 2018-06-14 02:39:53 UTC Comment hidden (obsolete)
Comment 10 clemty 2018-06-17 19:14:14 UTC Comment hidden (obsolete)
Comment 11 QA Administrators 2019-06-18 02:47:30 UTC Comment hidden (obsolete)
Comment 12 clemty 2019-06-18 15:49:34 UTC
still happens

Version: 6.2.4.2 (x64)
Build ID: 2412653d852ce75f65fbfa83fb7e7b669a126d64
Comment 13 QA Administrators 2021-06-18 04:02:34 UTC Comment hidden (obsolete)
Comment 14 Timur 2021-06-18 12:40:43 UTC
Still happens in 7.3+, but: 
This is minor at best, or trivial.
My take is "NotABug" or "WontFix". Let's call UX.
Comment 15 clemty 2021-06-20 10:28:53 UTC
> My take is "NotABug" or "WontFix". Let's call UX.

(original submitter here)

It's obviously not intended behavior, so "NotABug" would not apply.
Marking almost decade-old bugs as "WontFix" will improve metrics but are you doing the project a favor with that?
Comment 16 Heiko Tietze 2021-06-21 10:09:26 UTC
I agree with the request, the foot/endnote number must not show up in the Navigator as on the ToC (or drawn correctly in superscript).

Jim, one for you?
Comment 17 Jim Raykowski 2021-06-23 05:36:24 UTC
@Heiko, Yes!
https://gerrit.libreoffice.org/c/core/+/117692
Comment 18 Commit Notification 2021-06-24 14:51:48 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f446a203fa2897bab8ae7686c948a8bf060675c6

tdf#46626 Don't include footnote numbers in Navigator headings

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2021-06-24 22:38:42 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/32cf12bf941975f7a040420f797ff6969caaf2d9

tdf#46626 Don't include footnote numbers in Navigator headings

It will be available in 7.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 BogdanB 2021-07-15 11:33:49 UTC
The footnote is not shown now in the Navigator.

Tested in 
Version: 7.2.0.1.0+ (x64) / LibreOffice Community
Build ID: ffeeb78118a887419c5f33bb5311f0e2ddae463c
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: threaded
Comment 21 BogdanB 2021-07-15 11:34:43 UTC
I mean the footnote number is not shown in the Navigator.