tdf#46626 Don't include footnote numbers in Navigator headings

Change-Id: I8c655c6ed1e1d05407dac27ef19f26c6ca8d8d54